# fak-doc

./: meson.build
src/: main.c  spi.c  spi.h
